--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,7 @@
 .nav-bar {
   display: flex;
   flex-direction: row;
+  align-self: flex-start;
   justify-content: space-between;
   background-color: black;
   height: 7vh;
