front end stuff for favourites and profile. working so far

--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -1,3 +1,14 @@
 body {
   background-color: white;
 }
+
+.favCardContainer {
+  display: flex;
+
+  justify-content: center;
+}
+.favCard {
+  padding: 1rem;
+  margin: 1rem;
+  border: 1px solid black;
+}
