--- a/src/components/AddPiano/AddPiano.css
+++ b/src/components/AddPiano/AddPiano.css
@@ -1,9 +1,9 @@
 .addPiano {
-  height: 20rem;
+  height: 25rem;
   border: 1px solid black;
   position: absolute;
   top: 20%;
-  right: 20%;
+  right: 10%;
   z-index: 9999;
   border: 1px solid black;
   background-color: white;
@@ -13,12 +13,45 @@
 .addPiano form {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  width: 20rem;
 }
 
 .addPiano input {
   font-size: 1rem;
+  width: 10rem;
 }
 
+.addPiano button {
+  width: 6rem;
+  margin: 1rem;
+  border: 1px solid black;
+}
 .addPiano p {
   color: green;
+}
+
+.addPianoForm {
+  height: 15rem;
+}
+
+.coordinates-label {
+  display: flex;
+  flex-direction: column;
+}
+
+.digital-inputs {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 20rem;
+}
+
+.digital-inputs input {
+  width: 2rem;
+}
+
+.digital-inputs li {
+  display: flex;
+  justify-content: center;
 }
