--- a/src/components/authPopUps/AuthPopUps.css
+++ b/src/components/authPopUps/AuthPopUps.css
@@ -4,21 +4,28 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 9999;
-  height: 20rem;
+  height: 22rem;
   background-color: white;
   border: 1px solid black;
   opacity: 90%;
 }
 
 .form-popup form {
-  font-size: 2rem;
+  font-size: 1rem;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  margin: 1rem;
   height: 20rem;
 }
 
 .form-popup input {
-  font-size: 2rem;
+  font-size: 1rem;
   height: 3rem;
-  width: 30rem;
+  width: 25rem;
+}
+
+.form-popup button {
+  width: 8rem;
+  margin: 1rem;
 }
