--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Palanquin+Dark:wght@700&family=Roboto:wght@300&display=swap");
+
 #root {
   margin: 0;
   padding: 0;
   text-align: center;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
