--- a/src/components/QuickBar/QuickBar.css
+++ b/src/components/QuickBar/QuickBar.css
@@ -1,9 +1,11 @@
 .quickBar {
+  padding: 1rem;
   position: absolute;
   top: 20%;
   right: 10%;
   z-index: 9999;
   border: 1px solid black;
+  border-radius: 5px;
   background-color: white;
   opacity: 80%;
 }
